--- a/Universe/Universe.vcxproj.filters
+++ b/Universe/Universe.vcxproj.filters
@@ -16,10 +16,12 @@
     <ClInclude Include="Source\Universe\EntryPoint.h">
       <Filter>Universe</Filter>
     </ClInclude>
+    <ClInclude Include="Source\uepch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Universe\Application.cpp">
       <Filter>Universe</Filter>
     </ClCompile>
+    <ClCompile Include="Source\uepch.cpp" />
   </ItemGroup>
 </Project>
