--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Universe/Vendor/glm"]
 	path = Universe/Vendor/glm
 	url = https://github.com/Kefsner/glm
+[submodule "Universe/Vendor/spdlog"]
+	path = Universe/Vendor/spdlog
+	url = git@github.com:gabime/spdlog.git
