--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,8 +1,13 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+ViewportPos=1292,183
+ViewportId=0xE927CF2F
+Size=550,673
+Collapsed=0
+
+[Docking][Data]
 
