--- a/Universe/Universe.vcxproj
+++ b/Universe/Universe.vcxproj
@@ -151,24 +151,24 @@
     <ClInclude Include="Source\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="Source\UEpch.h" />
     <ClInclude Include="Source\Universe.h" />
-    <ClInclude Include="Source\Universe\Application.h" />
+    <ClInclude Include="Source\Universe\Core\Application.h" />
     <ClInclude Include="Source\Universe\Core\Assert.h" />
     <ClInclude Include="Source\Universe\Core\Base.h" />
-    <ClInclude Include="Source\Universe\Core\PlatformDetection.h" />
-    <ClInclude Include="Source\Universe\EntryPoint.h" />
+    <ClInclude Include="Source\Universe\Core\EntryPoint.h" />
+    <ClInclude Include="Source\Universe\Core\Input.h" />
+    <ClInclude Include="Source\Universe\Core\KeyCodes.h" />
+    <ClInclude Include="Source\Universe\Core\Layer.h" />
+    <ClInclude Include="Source\Universe\Core\LayerStack.h" />
+    <ClInclude Include="Source\Universe\Core\Log.h" />
+    <ClInclude Include="Source\Universe\Core\MouseButtonCodes.h" />
+    <ClInclude Include="Source\Universe\Core\Window.h" />
     <ClInclude Include="Source\Universe\Events\ApplicationEvent.h" />
     <ClInclude Include="Source\Universe\Events\Event.h" />
     <ClInclude Include="Source\Universe\Events\KeyEvent.h" />
     <ClInclude Include="Source\Universe\Events\MouseEvent.h" />
     <ClInclude Include="Source\Universe\ImGui\ImGuiLayer.h" />
-    <ClInclude Include="Source\Universe\Input.h" />
-    <ClInclude Include="Source\Universe\KeyCodes.h" />
-    <ClInclude Include="Source\Universe\Layer.h" />
-    <ClInclude Include="Source\Universe\LayerStack.h" />
-    <ClInclude Include="Source\Universe\Log.h" />
-    <ClInclude Include="Source\Universe\MouseButtonCodes.h" />
     <ClInclude Include="Source\Universe\Renderer\GraphicsContext.h" />
-    <ClInclude Include="Source\Universe\Window.h" />
+    <ClInclude Include="Source\Universe\Renderer\Shader.h" />
     <ClInclude Include="Vendor\glm\glm\common.hpp" />
     <ClInclude Include="Vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="Vendor\glm\glm\detail\_fixes.hpp" />
@@ -593,13 +593,13 @@
     <ClCompile Include="Source\UEpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Source\Universe\Application.cpp" />
+    <ClCompile Include="Source\Universe\Core\Application.cpp" />
+    <ClCompile Include="Source\Universe\Core\Layer.cpp" />
+    <ClCompile Include="Source\Universe\Core\LayerStack.cpp" />
+    <ClCompile Include="Source\Universe\Core\Log.cpp" />
     <ClCompile Include="Source\Universe\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="Source\Universe\ImGui\ImGuiLayer.cpp" />
-    <ClCompile Include="Source\Universe\Layer.cpp" />
-    <ClCompile Include="Source\Universe\LayerStack.cpp" />
-    <ClCompile Include="Source\Universe\Log.cpp" />
-    <ClCompile Include="Source\Universe\Renderer\GraphicsContext.cpp" />
+    <ClCompile Include="Source\Universe\Renderer\Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Vendor\GLFW\GLFW.vcxproj">
