--- a/Universe/Universe.vcxproj.filters
+++ b/Universe/Universe.vcxproj.filters
@@ -1366,6 +1366,9 @@
       <Filter>Vendor\glm\glm</Filter>
     </ClInclude>
     <ClInclude Include="Source\Universe\Renderer\Shader.h" />
+    <ClInclude Include="Source\Universe\Renderer\Buffer.h" />
+    <ClInclude Include="Source\Platform\OpenGL\OpenGLBuffer.h" />
+    <ClInclude Include="Source\Universe\Renderer\Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Platform\OpenGL\OpenGLContext.cpp">
@@ -1399,5 +1402,8 @@
       <Filter>Source\Universe\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="Source\Universe\Renderer\Shader.cpp" />
+    <ClCompile Include="Source\Universe\Renderer\Buffer.cpp" />
+    <ClCompile Include="Source\Platform\OpenGL\OpenGLBuffer.cpp" />
+    <ClCompile Include="Source\Universe\Renderer\Renderer.cpp" />
   </ItemGroup>
 </Project>
