--- a/Universe/Universe.vcxproj
+++ b/Universe/Universe.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="Source\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="Source\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="Source\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="Source\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="Source\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="Source\UEpch.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="Source\Universe\Renderer\GraphicsContext.h" />
     <ClInclude Include="Source\Universe\Renderer\Renderer.h" />
     <ClInclude Include="Source\Universe\Renderer\Shader.h" />
+    <ClInclude Include="Source\Universe\Renderer\VertexArray.h" />
     <ClInclude Include="Vendor\glm\glm\common.hpp" />
     <ClInclude Include="Vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="Vendor\glm\glm\detail\_fixes.hpp" />
@@ -592,6 +594,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="Source\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="Source\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="Source\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="Source\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="Source\UEpch.cpp">
@@ -606,6 +609,7 @@
     <ClCompile Include="Source\Universe\Renderer\Buffer.cpp" />
     <ClCompile Include="Source\Universe\Renderer\Renderer.cpp" />
     <ClCompile Include="Source\Universe\Renderer\Shader.cpp" />
+    <ClCompile Include="Source\Universe\Renderer\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Vendor\GLFW\GLFW.vcxproj">
